--- a/uvod/index.html
+++ b/uvod/index.html
@@ -12,6 +12,6 @@
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum blanditiis doloremque soluta vero ullam corrupti, at eum similique mollitia ea dicta hic. Maxime quo iste sunt magnam totam tempora neque.</p>
     <a href="https://bonk.io/" target="_blank">Toto je odkaz na hru</a>
     <p><a href="www.bonk.io/">Toto je spatny odkaz</a></p>
-    <img src="https://tse1.mm.bing.net/th/id/OIP.ORgjwgzFS16ffEwiaP4RLAHaFj?rs=1&pid=ImgDetMain&o=7&rm=3 " alt="Oopsie" width="1000" height="10"
+    <img src="https://tse1.mm.bing.net/th/id/OIP.ORgjwgzFS16ffEwiaP4RLAHaFj?rs=1&pid=ImgDetMain&o=7&rm=3 " alt="Oopsie" width="1000" height="10">
 </body>
 </html>
