--- a/uvod/index.html
+++ b/uvod/index.html
@@ -3,6 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>MyFirstPage</title>
+    
+    <!--Favicon(ikonka)-->
+    <link href="https://www.freeiconspng.com/uploads/minecraft-icon-8.png" rel="icon" type="image/x-icon">
+
 </head>
 <body>
     <h1>MyFirstPage</h1>
@@ -11,7 +15,27 @@
     <!--Takhle se dela komentar-->
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum blanditiis doloremque soluta vero ullam corrupti, at eum similique mollitia ea dicta hic. Maxime quo iste sunt magnam totam tempora neque.</p>
     <a href="https://bonk.io/" target="_blank">Toto je odkaz na hru</a>
-    <p><a href="www.bonk.io/">Toto je spatny odkaz</a></p>
-    <img src="https://tse1.mm.bing.net/th/id/OIP.ORgjwgzFS16ffEwiaP4RLAHaFj?rs=1&pid=ImgDetMain&o=7&rm=3 " alt="Oopsie" width="1000" height="10">
+    <p>
+        <a href="www.bonk.io/" target="_blank">Toto je spatny odkaz</a>
+    </p>
+   <img src="https://tse1.mm.bing.net/th/id/OIP.ORgjwgzFS16ffEwiaP4RLAHaFj?rs=1&pid=ImgDetMain&o=7&rm=3 " alt="Oopsie" width="200" height="110">
+    <p>
+        <i>Tohle je kurzíva</i> <sub>Subscript text</sub>
+    </p>
+    <p>
+        <strong>Important text</strong> <em>Emphasized text</em>
+    </p>
+    <p>
+        <b>tučné písmo</b> <del>Deleted text</del>
+    </p>
+    <p>
+        <mark>marked text</mark> <ins>Inserted text</ins>
+    </p>
+    <p>
+        <small>Smaller text</small> <sup>Superscript text</sup>
+    </p>
+
+    <h1>Pokročilé obrázky</h1>
+
 </body>
 </html>
