--- a/prace v hodine/index.html
+++ b/prace v hodine/index.html
@@ -6,6 +6,10 @@
     <title>Document</title>
 </head>
 <body>
-    aaaa
+    <table>
+        <tr>
+            <td>aaaa</td>
+        </tr>
+    </table>
 </body>
 </html>
