--- a/prace v hodine/index.html
+++ b/prace v hodine/index.html
@@ -6,9 +6,77 @@
     <title>Document</title>
 </head>
 <body>
-    <table>
+    <h1>Web Infomax IT Solutions</h1>
+    <table border="1">
         <tr>
-            <td>aaaa</td>
+            <td rowspan="2">Sr.NO</td>
+            <td rowspan="2">Details of the Services Provided</td>
+            <td rowspan="2">Qty</td>
+            <td rowspan="1" colspan="2">Service Period</td>
+            <td colspan="4">Service Performance Details</td>
+        </tr>
+
+        <tr>
+            <td>From</td>
+            <td>To</td>
+            <td>S.No</td>
+            <td>Service ID No:</td>
+            <td>Gap in Service (in days)</td>
+            <td>Overall Performance Remarks (Satisfactory/un-satisfactory)</td>
+        </tr>
+
+        <tr>
+            <td rowspan="3">1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>3</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td rowspan="2">2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>1</td>
+            <td></td>
+            <td></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td></td>
+            <td>2</td>
+            <td></td>
+            <td></td>
+            <td></td>
+
         </tr>
     </table>
 </body>
