--- a/Prace v hodine/Nová složka/index.html
+++ b/Prace v hodine/Nová složka/index.html
@@ -28,6 +28,17 @@
             <button>PURCHASE NOW</button>
         </div>
     </header>
-
+    <section id="sec-1">
+        <h1>Be famliar with stunning design</h1>
+        <div id="grid-container"></div>
+    </section>
+    <section id="sec-2">
+        <div id="context">
+            <h2> Dont Hesitate, Let Out Your Creative Beast</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Officiis, doloremque inventore odio possimus ipsam aperiam aspernatur delectus alias nihil saepe quaerat molestiae odit voluptatibus qui? Voluptates culpa odit reprehenderit ratione.</p>
+            <button>VIEW ALL PROJECTS</button>
+        </div>
+        <div id="img-container">...</div>
+    </section>
 </body>
 </html>
